{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 46,
  "lineage": "a4f990f3-2c3b-a417-f70f-3e05b03a4c4b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856725520313:internet-gateway/igw-08fe1f60184a076a1",
            "id": "igw-08fe1f60184a076a1",
            "owner_id": "856725520313",
            "tags": {
              "Name": "gateway_igw"
            },
            "tags_all": {
              "Name": "gateway_igw"
            },
            "vpc_id": "vpc-050dc8711a37a1cf8"
          },
          "dependencies": [
            "aws_vpc.dada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0c7a277def460a67a",
            "network_interface_id": "eni-06cb091264dc96c54",
            "private_ip": "10.0.0.215",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b208b9205769afac",
            "tags": {
              "Name": "gateway_NAT"
            },
            "tags_all": {
              "Name": "gateway_NAT"
            }
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.dada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-013f07f40cbc03a921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c7a277def460a67a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013f07f40cbc03a92",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_vpc",
            "aws_route_table.private_route_tbl",
            "aws_subnet.private_subnet",
            "aws_vpc.dada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08fe1f60184a076a1",
            "id": "r-rtb-0e3e6f85e1dcc15381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3e6f85e1dcc1538",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_route_table.public_route_tbl",
            "aws_vpc.dada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856725520313:route-table/rtb-013f07f40cbc03a92",
            "id": "rtb-013f07f40cbc03a92",
            "owner_id": "856725520313",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-050dc8711a37a1cf8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_tbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856725520313:route-table/rtb-0e3e6f85e1dcc1538",
            "id": "rtb-0e3e6f85e1dcc1538",
            "owner_id": "856725520313",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public_route_table"
            },
            "tags_all": {
              "Name": "Public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-050dc8711a37a1cf8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022ccff32c8547293",
            "route_table_id": "rtb-013f07f40cbc03a92",
            "subnet_id": "subnet-0b208b9205769afac"
          },
          "dependencies": [
            "aws_route_table.private_route_tbl",
            "aws_subnet.private_subnet",
            "aws_vpc.dada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b094c193951179d7",
            "route_table_id": "rtb-0e3e6f85e1dcc1538",
            "subnet_id": "subnet-009f9b371cfede916"
          },
          "dependencies": [
            "aws_route_table.public_route_tbl",
            "aws_subnet.public_subnet",
            "aws_vpc.dada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856725520313:subnet/subnet-0b208b9205769afac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b208b9205769afac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "856725520313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_google"
            },
            "tags_all": {
              "Name": "private_subnet_google"
            },
            "vpc_id": "vpc-050dc8711a37a1cf8"
          },
          "dependencies": [
            "aws_vpc.dada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856725520313:subnet/subnet-009f9b371cfede916",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009f9b371cfede916",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "856725520313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_google"
            },
            "tags_all": {
              "Name": "public_subnet_google"
            },
            "vpc_id": "vpc-050dc8711a37a1cf8"
          },
          "dependencies": [
            "aws_vpc.dada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856725520313:vpc/vpc-050dc8711a37a1cf8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0d0aa50bf904ab467",
            "default_route_table_id": "rtb-0fbcbc10809da4a5c",
            "default_security_group_id": "sg-034d7b626421d5cf1",
            "dhcp_options_id": "dopt-0b08a541147cf5c77",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-050dc8711a37a1cf8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbcbc10809da4a5c",
            "owner_id": "856725520313",
            "tags": {
              "Name": "Goole_vpc"
            },
            "tags_all": {
              "Name": "Goole_vpc"
            }
          }
        }
      ]
    }
  ]
}